# SpreadsheetTestTask

./: .gitignore  CMakeLists.txt  README.md
src/app/: cell_changer.cpp  cell_changer.hpp  cells_map.cpp  cells_map.hpp  helpers.cpp  helpers.hpp  logger.hpp  main.cpp  spreadsheet.cpp  spreadsheet.hpp  spreadsheet_loader.cpp  spreadsheet_loader.hpp  thread_pool.cpp  thread_pool.hpp  timer.hpp
src/app/formula/: cell_proxy.cpp  cell_proxy.hpp  cell_value.cpp  cell_value.hpp  core_elements.cpp  core_elements.hpp  i_formula_element.hpp  operators.hpp  parser.cpp  parser.hpp
src/tests/: cells_map_tests.cpp  helpers.hpp  helpers_tests.cpp  spreadsheet_tests.cpp  test_main.cpp
